--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <nav>
-        <p class="logo">LOGO</p><!--Logo-->
+        <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
             <li><a href="">Teste1</a></li><!--Início-->
             <li><a href="">Teste2</a></li><!--Historico---->
             <li><a href="">Teste3</a></li><!--Sair-->
         </ul>
     </nav>
+    <h1>Visitantes - FACENS</h1>
 </body>
 </html>
