Adds sing in form

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
-            <li><a href="">Teste1</a></li><!--Início-->
-            <li><a href="">Teste2</a></li><!--Historico---->
-            <li><a href="">Teste3</a></li><!--Sair-->
+            <li><a href="">Home</a></li><!--Início-->
+            <li><a href="">Histórico</a></li><!--Historico---->
+            <li><a href="">Sair</a></li><!--Sair-->
         </ul>
     </nav>
-    <h1>Visitantes - FACENS</h1>
+    <h1>Controle de Visitantes</h1>
+    <div class="form">
+        <input type="text" placeholder="Usuário">
+        <input type="text" placeholder="Senha">
+        <button>Entrar</button>
+    </div>
 </body>
 </html>
