--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
-            <li><a href="">Home</a></li><!--Início-->
-            <li><a href="">Histórico</a></li><!--Historico---->
-            <li><a href="">Sair</a></li><!--Sair-->
+            <li><a href="index.html">Home</a></li><!--Início-->
+            <li><a href="historico.html">Histórico</a></li><!--Historico---->
+            <li><a href="#">Sair</a></li><!--Sair-->
         </ul>
     </nav>
     <h1>Controle de Visitantes</h1>
