--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <h1>Controle de Visitantes</h1>
-    <div class="form">
+    <div class="form-login">
         <form action="">
             <div class="item">
                 <label for="user">Tipo de Acesso</label>
