--- a/registro.html
+++ b/registro.html
@@ -17,6 +17,25 @@
             <li><a href="#">Sair</a></li><!--Sair-->
         </ul>
     </nav>
-    <h1>Controle de Visitantes</h1>
+    <h1>Registro</h1>
+    <div class="form-registro">
+        <form action="">
+            <div class="nome item">
+                <p>Nome</p>
+                <p id="info"></p><!--Nome vem do back-->
+            </div>
+            <div class="cpf item">
+                <p>CPF/CNPJ</p>
+                <p id="info"></p><!--Info vem do back-->
+            </div>
+            <div class="veiculos item">
+                <label for="veiculos">Veículos</label>
+                <select id="veiculos">
+                    <option value="novo-carro">Novo</option>
+                </select>
+            </div>
+            <button>Salvar</button>
+        </form>
+    </div>
 </body>
 </html>
