--- a/cadastro.html
+++ b/cadastro.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="jquery-3.4.1.min.js"></script>
     <title>Controle de Visitantes - Cadastro</title>
 </head>
 <body>
@@ -33,16 +34,26 @@
             <div class="item">
                 <label for="sexo">Sexo</label><!--sexo-->
                 <br>
-                <input type="radio" name="sexo" value="masculino"> Masculino
-                <input type="radio" name="sexo" value="feminino"> Feminino
-                <input type="radio" name="sexo" value="outro"> Outro
+                <input type="radio" name="sexo" value="masculino" id="m"> Masculino
+                <input type="radio" name="sexo" value="feminino" id="f"> Feminino
+                <input type="radio" name="sexo" value="outro" id="o"> Outro
             </div>
             <div class="item">
                     <label for="telefone">Telefone</label><br><!--Phone-->
                     <input type="text" placeholder="(15) 9 9876-6789" id="telefone">
                 </div>
-            <button>Salvar</button>
+            <button id="Save">Salvar</button>
         </form>
     </div>
 </body>
+<script>
+document.getElementById("Save").addEventListener('click',function ()
+{
+    $.post( "ajax/test.html",{"cpfcnpj": $('#cpf-cnpj').val(), "nome": $('#nome').val(), 
+    "sexoM": $('m').val(), "sexoF": $('f').val(), "sexoO": $('o').val(),
+    "telefone": $('telefone').val()} ,function( data ) {
+    $( ".result" ).html( data );
+    });  
+});
+</script>
 </html>
