--- a/historico.html
+++ b/historico.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="jquery-3.4.1.min.js"></script>
     <title>Controle de Visitantes - Histórico</title>
 </head>
 <body>
