--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <script src="jquery-3.4.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>Controle de Visitantes - Entrar</title>
 </head>
 <body>
@@ -20,31 +20,31 @@
     </nav>
     <h1>Controle de Visitantes</h1>
     <div class="form-login">
-        <form action="">
-            <div class="item">
-                <label for="user">Tipo de Acesso</label>
-                <select name="usuario" id="user">
-                    <option value="adm">Admin</option>
-                    <option value="basic">Visualizar</option>
-                </select>
-            </div>
-            <div class="item">
-                <label for="username">Usuário</label>
-                <input type="text" placeholder="Usuário" id="username">
-            </div>
-            <div class="item">
-                <label for="pwd">Senha</label>
-                <input type="password" placeholder="Senha" id="pwd">
-            </div>
-            <button id="Save">Entrar</button>
-        </form>
+        
+        <div class="item">
+            <label for="user">Tipo de Acesso</label>
+            <select name="usuario" id="user">
+                <option value="adm">Admin</option>
+                <option value="basic">Visualizar</option>
+            </select>
+        </div>
+        <div class="item">
+            <label for="username">Usuário</label>
+            <input type="text" placeholder="Usuário" id="username">
+        </div>
+        <div class="item">
+            <label for="pwd">Senha</label>
+            <input type="password" placeholder="Senha" id="pwd">
+        </div>
+        <button id="Save">Entrar</button>
+    
     </div>
 </body>
 <script>
 
 document.getElementById("Save").addEventListener('click',function ()
 {
-    $.post( "ajax/test.html",{"usuario": $('#username').val(), "senha": $('#pwd').val(), "tipo": $('user').val()} ,function( data ) {
+    $.post( "https://localhost:44337/api/values/login",{"usuario": $('#username').val(), "senha": $('#pwd').val(), "tipo": $('user').val()} ,function( data ) {
     $( ".result" ).html( data );
     });  
 }); 
