adds cadastroUsuario with Post

--- a/cadastro.html
+++ b/cadastro.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <h1>Cadastro</h1>
-    <div class="form-cadastro">
+    <div class="form">
         <div class="item">
                 <input type="radio" name="cpf-cnpj" value="CPF" id="cpfBool">CPF
                 <input type="radio" name="cpf-cnpj" value="CNPJ"> CNPJ
@@ -45,14 +45,4 @@
     </div>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
-<!--<script>
-document.getElementById("Save").addEventListener('click',function ()
-{
-    $.post( "ajax/test.html",{"cpfcnpj": $('#cpf-cnpj').val(), "nome": $('#nome').val(), 
-    "sexoM": $('m').val(), "sexoF": $('f').val(), "sexoO": $('o').val(),
-    "telefone": $('telefone').val()} ,function( data ) {
-    $( ".result" ).html( data );
-    });  
-});
-</script>-->
 </html>
