--- a/registro.html
+++ b/registro.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <h1>Registro</h1>
-    <div class="form-registro">
+    <div class="form">
         <div class="nome item">
             <p>Nome</p>
             <p id="info"></p><!--Nome vem do back-->
