--- a/historico.html
+++ b/historico.html
@@ -19,7 +19,18 @@
         </ul>
     </nav>
     <h1>Controle de Visitantes</h1>
-    <a href="dashboard.html">Relatórios</a>
+    <!--<a href="dashboard.html">Relatórios</a>-->
+    <table class="tabelaUsuarios">
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Tipo</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
