Post to get users to Historico

--- a/historico.html
+++ b/historico.html
@@ -20,6 +20,7 @@
     </nav>
     <h1>Controle de Visitantes</h1>
     <!--<a href="dashboard.html">Relatórios</a>-->
+    <button id="updateUsers" onclick="updateUsers()"></button>
     <table class="tabelaUsuarios">
         <thead>
             <tr>
@@ -27,7 +28,7 @@
                 <th>Tipo</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="bodyUsers">
 
         </tbody>
     </table>
