Fixes table in css

--- a/historico.html
+++ b/historico.html
@@ -20,7 +20,9 @@
     </nav>
     <h1>Controle de Visitantes</h1>
     <!--<a href="dashboard.html">Relatórios</a>-->
-    <button id="updateUsers" onclick="updateUsers()"></button>
+    <button id="updateUsers" onclick="updateUsers()">Atualizar usuário</button><br>
+    <button id="updateUsers" onclick="updateUsers()">Remover usuário</button><br>
+    <button id="updateUsers" onclick="updateUsers()">Reload usuários</button><br>
     <table class="tabelaUsuarios">
         <thead>
             <tr>
@@ -29,7 +31,8 @@
             </tr>
         </thead>
         <tbody id="bodyUsers">
-
+            <tr><td>teste</td><td>teste</td></tr>
+            <tr><td>teste</td><td>teste</td></td></tr>
         </tbody>
     </table>
     <script type="text/javascript" src="js/index.js"></script>
