--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <script src="jquery-3.4.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>Controle de Visitantes - Histórico</title>
 </head>
 <body>
@@ -19,5 +19,6 @@
         </ul>
     </nav>
     <h1>Controle de Visitantes</h1>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
