--- a/registro.html
+++ b/registro.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <script src="jquery-3.4.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>Controle de Visitantes - Registro</title>
 </head>
 <body>
@@ -20,23 +20,22 @@
     </nav>
     <h1>Registro</h1>
     <div class="form-registro">
-        <form action="">
-            <div class="nome item">
-                <p>Nome</p>
-                <p id="info"></p><!--Nome vem do back-->
-            </div>
-            <div class="cpf item">
-                <p>CPF/CNPJ</p>
-                <p id="info"></p><!--Info vem do back-->
-            </div>
-            <div class="veiculos item">
-                <label for="veiculos">Veículos</label>
-                <select id="veiculos">
-                    <option value="novo-carro">Novo</option>
-                </select>
-            </div>
-            <button id="Save">Salvar</button>
-        </form>
+        <div class="nome item">
+            <p>Nome</p>
+            <p id="info"></p><!--Nome vem do back-->
+        </div>
+        <div class="cpf item">
+            <p>CPF/CNPJ</p>
+            <p id="info"></p><!--Info vem do back-->
+        </div>
+        <div class="veiculos item">
+            <label for="veiculos">Veículos</label>
+            <select id="veiculos">
+                <option value="novo-carro">Novo</option>
+            </select>
+        </div>
+        <button id="Save" onclick="registrar()">Salvar</button>
+        <script type="text/javascript" src="js/index.js"></script>
     </div>
 </body>
 <script>
