adds buttons mustard classes

--- a/cadastro.html
+++ b/cadastro.html
@@ -46,7 +46,7 @@
                 <label for="telefone">Telefone</label><br><!--Phone-->
                 <input type="text" placeholder="(15) 9 9876-6789" id="telefone">
             </div>
-        <button id="SaveCadastro" onclick="cadastrar()">Salvar</button>
+        <button class="button-primary" id="SaveCadastro" onclick="cadastrar()">Salvar</button>
     </div>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
