--- a/cadastroUsuario.html
+++ b/cadastroUsuario.html
@@ -40,7 +40,7 @@
             <label for="pwd">Senha</label>
             <input type="password" placeholder="Senha" id="pwd">
         </div>
-        <button id="Save" onclick="cadastrarUsuario()">Entrar</button>
+        <button class="button-primary" id="Save" onclick="cadastrarUsuario()">Entrar</button>
     
     </div>
     <script type="text/javascript" src="js/index.js"></script>
