--- a/historico.html
+++ b/historico.html
@@ -23,21 +23,22 @@
             <li><a href="#">Sair</a></li><!--Sair-->
         </ul>
     </nav>
-    <h1>Controle de Visitantes</h1>
-    <!--<a href="dashboard.html">Relatórios</a>-->
-    <button id="updateUsers" onclick="updateUsers()">Reload usuários</button>
-    <table class="tabelaUsuarios">
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>Tipo</th>
-            </tr>
-        </thead>
-        <tbody id="bodyUsers">
-        </tbody>
-    </table>
+    <h1>Usuários</h1>
+    <div>
+        <button id="updateUsers" onclick="updateUsers()">Reload usuários</button>
+        <table class="tabelaUsuarios">
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Tipo</th>
+                </tr>
+            </thead>
+            <tbody id="bodyUsers">
+            </tbody>
+        </table>
+    </div>
 
-    <div class="form">
+    <div class="form usuarios">
         <div class="item">
             <label for="username">Usuário</label>
             <input type="text" placeholder="Usuário" id="username">
@@ -46,8 +47,10 @@
             <label for="pwd">Senha</label>
             <input type="password" placeholder="Senha" id="pwd">
         </div>
-        <button onclick="changePassword()">Update</button><br>
-        <button onclick="deleteUser()">Delete</button>
+        <br>
+        <button id="NovoUsuario" class="button-primary">Novo Usuário</button>
+        <button onclick="changePassword()" class="button-primary">Atualizar</button>
+        <button onclick="deleteUser()" class="button-primary">Deletar</button>
     
     </div>
     <script type="text/javascript" src="js/index.js"></script>
