--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
             <label for="pwd">Senha</label>
             <input type="password" placeholder="Senha" id="pwd">
         </div>
-        <button class="button-primary" id="Save" onclick="cadastrarUsuario()">Entrar</button>
+        <button class="button-primary" id="Save" onclick="Login()">Entrar</button>
     
     </div>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
 </body>
 </html>
