Autenticação de login
Finalizada autenticação de login

--- a/historico.html
+++ b/historico.html
@@ -14,7 +14,7 @@
     
     <title>Controle de Visitantes - Histórico</title>
 </head>
-<body>
+<body onload="checkAuth()" onunload="Logout()">
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
