--- a/registro.html
+++ b/registro.html
@@ -14,7 +14,7 @@
 
         <title>Controle de Visitantes - Registro</title>
 </head>
-<body>
+<body onunload="Logout()">
         <nav>
                 <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
                 <ul class="links">
