--- a/cadastro.html
+++ b/cadastro.html
@@ -14,7 +14,7 @@
     
     <title>Controle de Visitantes - Cadastro</title>
 </head>
-<body onunload="Logout()">
+<body onload="checkAuth()" onunload="Logout()">
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
@@ -49,5 +49,6 @@
         <button class="button-primary" id="SaveCadastro" onclick="cadastrar()">Salvar</button>
     </div>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
 </body>
 </html>
