--- a/historicoVisitas.html
+++ b/historicoVisitas.html
@@ -14,7 +14,7 @@
     
     <title>Controle de Visitantes - Histórico</title>
 </head>
-<body onunload="Logout()">
+<body onload="checkAuth()" onunload="Logout()">
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
@@ -54,5 +54,6 @@
     
     </div>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
 </body>
 </html>
