--- a/registro.html
+++ b/registro.html
@@ -14,7 +14,7 @@
 
         <title>Controle de Visitantes - Registro</title>
 </head>
-<body onunload="Logout()">
+<body onload="checkAuth()" onunload="Logout()">
         <nav>
                 <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
                 <ul class="links">
@@ -144,6 +144,7 @@
         </div>
 </body>
 <script type="text/javascript" src="js/styles.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
 <script>
         document.getElementById("Save").addEventListener('click',function ()
         {
